# ledgr

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.ini  codex.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 0001_create_expenses.py  0002_create_user_setup.py
api/: Cargo.toml
api/migrations/: 0001_init.sql
api/src/: config.rs  lib.rs  main.rs  state.rs
bruno/: bruno.json
bruno/Expenses/: Create Expense.bru  Daily Summary.bru  Delete Expense.bru  Get Expense.bru  List Expenses By Date.bru  List Expenses.bru  Replace Expense.bru  Update Expense.bru
bruno/Investments/: Get All MF.bru  MF by scheme Code.bru  folder.bru
bruno/Transactions/: Add transaction.bru  Get Transactions.bru
bruno/User Setup/: Accounts.bru  Add Account.bru  Add Budget.bru  Add Categories.bru  Add Tags.bru  Budgets.bru  Categories.bru  Create Account.bru  Create User.bru  List Accounts.bru  List Expense Categories.bru  List Tags.bru  Me.bru  Register.bru  Tags.bru  Token.bru  Update Account.bru  folder.bru  (+1 more)
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ledgr/: app.py  config.py  db.py  expenses.py  models.py  schemas.py
ledgr/core/: db.py  (+5 more)
ledgrctl/: Cargo.toml
migrations/: README  env.py
scripts/: bootstrap_db.py  refresh_mf_nav.py
tests/: test_expenses_api.py  test_investments_api.py  test_mfdata_utils.py  test_transactions_api.py  test_user_api.py  test_user_setup_api.py
(+69 files in other folders)
