[project]
name = "ledgr"
version = "0.1.0"
description = "Personal finance REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "psycopg[binary]>=3.1.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
