[project]
name = "ledgr"
version = "0.1.0"
description = "Personal finance REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.1.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.10",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
